k8s/ingress/news-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: news-api-ingress
  namespace: app
spec:
  ingressClassName: nginx
  rules:
  - host: api.labs.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: news-api
            port:
              number: 80
